--- a/app/src/main/res/layout/item_holiday_kotlin.xml
+++ b/app/src/main/res/layout/item_holiday_kotlin.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+        <variable
+            name="model"
+            type="com.github.easymvvm.kotlin.HolidayModelKotlin" />
+
+        <variable
+            name="acti"
+            type="com.github.easymvvm.kotlin.HolidayActivityKotlin" />
+    </data>
+
     <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
@@ -8,6 +18,7 @@
         android:layout_marginStart="6dp"
         android:layout_marginEnd="6dp"
         android:layout_marginBottom="6dp"
+
         card_view:cardCornerRadius="4dp"
         card_view:cardUseCompatPadding="true">
 
@@ -16,6 +27,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="8dp">
+
+            <ImageView
+                android:id="@+id/iv_dish"
+                imageURL="@{model.thumbnail}"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:contentDescription="@string/app_name"
+                android:scaleType="centerCrop" />
 
             <TextView
                 android:id="@+id/tv_date"
@@ -34,10 +53,5 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <data>
-        <variable
-            name="model"
-            type="com.github.easymvvm.kotlin.HolidayModelKotlin" />
-    </data>
 
 </layout>
